--- a/src/index.css
+++ b/src/index.css
@@ -133,7 +133,7 @@ body {
     }
 
     video {
-        @apply w-full md:h-[80%] h-1/2 absolute bottom-0 left-0 md:object-contain object-bottom object-cover;
+         @apply w-full h-full absolute bottom-0 left-0 object-bottom object-contain ;
     }
 
     #cocktails {
