--- a/src/index.css
+++ b/src/index.css
@@ -85,7 +85,7 @@ body {
     }
 
     .noisy {
-        @apply absolute inset-0 size-full bg-[url("/images/noise.png")];
+        @apply absolute inset-0 size-full bg-[url("/images/noise.png")] ;
     }
 
     #hero {
@@ -132,8 +132,8 @@ body {
         }
     }
 
-    video {
-         @apply w-full h-full absolute bottom-0 left-0 object-bottom object-contain ;
+   video {
+        @apply w-full md:h-[80%] h-1/2 absolute bottom-0 left-0 md:object-contain object-bottom object-cover;
     }
 
     #cocktails {
