--- a/src/index.css
+++ b/src/index.css
@@ -87,7 +87,6 @@ body {
     .noisy {
         @apply absolute inset-0 size-full bg-[url("/images/noise.png")] ;
     }
-
     #hero {
         @apply relative z-10 min-h-dvh w-full border border-transparent;
 
@@ -133,7 +132,7 @@ body {
     }
 
    video {
-        @apply w-full md:h-[80%] h-1/2 absolute bottom-0 left-0 ;
+         @apply w-full md:h-[80%] h-1/2 absolute bottom-0 left-0 md:object-contain object-bottom object-cover;
     }
 
     #cocktails {
